index file modified

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
      <h1>Hello Js</h1> 
 
 
-    <h1>Yeah! i can write HTML content through Javascript </h1>
+    <!-- <h1>Yeah! i can write HTML content through Javascript </h1>
 
 
     <h1>My birth Year is 2004</h1>
 
 
-    <h1>John Doe Ordered 10 T-Shirt(s) on BrandFit Clothing Store</h1>
+    <h1>John Doe Ordered 10 T-Shirt(s) on BrandFit Clothing Store</h1> -->
 
 
 
