index file modified

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js Assignment</title>
+    <link rel="stylesheet" href="style.css">
+
+
+
 </head>
 <body>
 
@@ -19,8 +23,40 @@
     <h1>John Doe Ordered 10 T-Shirt(s) on BrandFit Clothing Store</h1> -->
 
 
+    <!-- <input class="chemistry" type="text" placeholder="Enter Your Marks">
+    <input class="physics" type="text" placeholder="Enter Your Marks">
+    <input class="maths" type="text" placeholder="Enter Your Marks">
+    <input class="english" type="text" placeholder="Enter Your Marks">
 
+    <button onclick="greetUSer()">Click</button> -->
+
+
+
+    <!-- <input class="physics" type="text" placeholder="Enter Physics Marks">
+    <input class="chemistry "type="text" placeholder="Enter Chemistry Marks">
+    <input class="maths" type="text" placeholder="Enter Maths Marks">
+    <input class="computer" type="text" placeholder="Enter Computer Marks">
     
+
+    <button onclick="greetUSer()">Submit</button> -->
+
+
+
+    <!-- <input class="css" type="text" placeholder="Enter css Marks">
+    <input class="js" type="text" placeholder="Enter js Marks">
+    <input class="html" type="text" placeholder="Enter html Marks">
+    <input class="reactjs" type="text" placeholder="Enter reactjs Marks">
+
+    <button onclick="start()">CLICK</button> -->
+
+
+
+    <input class="ca" type="text" placeholder="Enter ca Marks">
+    <input class="ba" type="text" placeholder="Enter ba Marks">
+    <input class="acca" type="text" placeholder="Enter acca Marks">
+    <input class="bba" type="text" placeholder="Enter bba Marks">
+
+    <button onclick="setUp()">CLICK</button>
 
 
  <script src="app.js"></script>
