index file created

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
 
 
-    <input class="ca" type="text" placeholder="Enter ca Marks">
+    <!-- <input class="ca" type="text" placeholder="Enter ca Marks">
     <input class="ba" type="text" placeholder="Enter ba Marks">
     <input class="acca" type="text" placeholder="Enter acca Marks">
     <input class="bba" type="text" placeholder="Enter bba Marks">
 
-    <button onclick="setUp()">CLICK</button>
+    <button onclick="setUp()">CLICK</button> -->
 
 
  <script src="app.js"></script>
